--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,15 +23,8 @@ jobs:
       - name: Build and Export Next.js
         run: npm run build
 
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Publish to GitHub Pages 🚀
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - name: deploy
+        uses: peaceiris/actions-gh-pages@v3.8.0  # Upewnij się, że masz najnowszą wersję
+        with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            publish_dir: ./out
